Hide paragraph when it's not visible to avoid occupying space.

--- a/src/style.scss
+++ b/src/style.scss
@@ -165,6 +165,8 @@ $notification-icon-size: 53px;
   .wonderpush-dialog {
     @include collapsible(bottom left);
     position: absolute;
+    width: max-content;
+    min-width: 240px;
     left: 0;
     bottom: $default-height + 15;
     border: 1px solid #ccc;
